--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -6,13 +6,13 @@ $colorPrimary: #3e0018;
 $colorSecondary: #88002d;
 $black: #363633;
 $grey: #885c7e;
-$greyOp: rgba(136, 92, 126, 0.8)
+$greyOp: rgba(136, 92, 126, 0.8);
 
-// @font-face {
-//     font-family: "Regular";
-//     src: url(../fonts/source-sans-pro/SourceSansPro-Regular.otf);
-// }
-// @font-face {
-//     font-family: "Bold";
-//     src: url(../fonts/source-sans-pro/SourceSansPro-Bold.otf);
-// }
+@font-face {
+    font-family: "Regular";
+    src: url(../fonts/source-sans-pro/SourceSansPro-Regular.otf);
+}
+@font-face {
+    font-family: "Bold";
+    src: url(../fonts/source-sans-pro/SourceSansPro-Bold.otf);
+}
