--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -139,6 +139,7 @@ h2{
     background-position: center;
     background-size: cover;
 }
+main{padding: 2rem 0;}
 #user-caves{
     background-image: url(../../public/images/cave.jpg);
     background-position: center;
@@ -192,4 +193,18 @@ h2{
 .cards .card .actions .modifier:hover {
     background-color: white;
     color: #88002d;
+}
+
+#menu-toggle {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    gap: 5px;
+}
+
+#menu-toggle .bar {
+    width: 30px;
+    height: 5px;
+    background-color: #fff;
+    border-radius: 5px;
 }
