--- a/assets/styles/_responsive.scss
+++ b/assets/styles/_responsive.scss
@@ -1,33 +1,57 @@
-
 @media (max-width: 1497px) {
-    /* Masquer le menu sur mobile */
-    .nav-list {
-        display: none;
-        position: absolute;
-        z-index: 100;
-        top: 60px;
-        left: 0;
-        background-color: black;
+  /* Masquer le menu sur mobile */
+  .nav-list {
+    display: none !important;
+    position: absolute;
+    z-index: 100;
+    top: 60px;
+    left: 0;
+    background-color: black;
+    width: 100%;
+    flex-direction: column;
+    align-items: end;
+    gap: 0;
+  }
+nav .nav-list li a{
+    padding: 0;
+}
+  /* Afficher le menu burger */
+  #menu-toggle {
+    display: flex !important;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    flex-direction: column;
+    gap: 5px;
+    cursor: pointer;
+  }
+
+  #menu-toggle span {
+    width: 25px;
+    height: 3px;
+    background: white;
+    display: block;
+  }
+
+  /* Afficher le menu lorsque le burger est activé */
+  .nav-list.active {
+    display: flex !important;
+  }
+
+  /* Effet hover */
+  .nav-list li a:hover {
+    background-color: #222;
+  }
+}
+#user-caves .filter-form{
+    padding-right: 4rem;
+}
+
+@media (max-width: 900px) {
+    #user-caves .filter-form{
+    padding-right: 10%;
+}
+    #user-caves .filter-form .wine-filter input{
         width: 100%;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    /* Afficher le menu burger */
-    #menu-toggle {
-        display: flex;
-        position: absolute;
-        top: 15px;
-        right: 15px;
-    }
-
-    /* Afficher le menu lorsque le burger est activé */
-    .nav-list.active {
-        display: flex;
-    }
-
-    /* Ajout de l'effet de survol */
-    .nav-list li a:hover {
-        background-color: black;
     }
 }
