--- a/templates/allCellars/allCellars.html.twig
+++ b/templates/allCellars/allCellars.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AllCellarsController!{% endblock %}
+{% block title %}The Cellars{% endblock %}
 
 {% block body %}
 <main id="user-caves">
