--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,13 +52,8 @@
             <img src="{{ asset('images/logo.png') }}" alt="logo site">
         </div>
         <ul>
-            <li><a href="#">Legal Mentions</a></li>
-            <li><a href="#">Confidentiality Policy</a></li>
-            <li><a href="#">Terms of Use</a></li>
-        </ul>
-        <ul>
-            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href="{{path('legal')}}">Legal Mentions</a></li>
+            <li><a href="{{path('terms')}}">Terms of Use</a></li>
         </ul>
         <ul>
             <li><p>© 2025 My Cave. All rights applied.</p></li>
