--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -7,16 +7,21 @@
         <div class="home-container">
             <h2>Welcome to</h2><h1>my <em>Cave</em></h1><h2></h2>
             <p>Dive into the winning world of wine with our virtual cellar designed not just for collectors, but for a thriving community of enthusiasts. Catalog and organize your bottles into cellars with effortless elegance, then share each story and vintage snapshot with friends and fellow wine lovers. Swap tasting notes, discover new favorites through community recommendations, and celebrate every bottle together. Our platform gives you a personal space to track your treasures—and a communal cellar to connect, explore, and toast with passion.</p>
+            {# <div class="home-actions">
+                <a href="{{path('allCellars')}}" class="btn">See our cellars</a>
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <a href="{{path('myCellar')}}" class="btn">Welcome! Click here to see your cellar</a>
+                {% else %}
+                    <a href="{{ path('app_login') }}" class="btn">Log In</a>
+                {% endif %}
+            </div> #}
             <div class="latest">
-                <article>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, delectus.</p>
-                </article>
-                <article>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, delectus.</p>
-                </article>
-                <article>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, delectus.</p>
-                </article>
+                <a href="{{path('allCellars')}}" class="btn">See our cellars</a>
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <a href="{{path('myCellar')}}" class="btn">Welcome! Click here to see your cellar</a>
+                {% else %}
+                    <a href="{{ path('app_login') }}" class="btn">Log In</a>
+                {% endif %}
             </div>
         </div>
        
