--- a/templates/myCellar/userCellar.html.twig
+++ b/templates/myCellar/userCellar.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CellarController!{% endblock %}
+{% block title %}Friend's Cellar{% endblock %}
 
 {% block body %}
 <main id="cellar">
