--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,6 +58,7 @@
         <ul>
             <li><p>© 2025 My Cave. All rights applied.</p></li>
         </ul>
+        <p>Anything to report? You may contact the administrator at vincent@lagrange.com</p>
     </footer>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
