--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
             <li><a href="{{ path('myCellar') }}">My cellar</a></li>
             <li><a href="{{ path('allCellars') }}">All Cellars</a></li>
             <li><a href="{{ path('wine') }}">All the Wine</a></li>
-            <li><a href="{{ path('about') }}">About</a></li>
+            <li><a href="{{ path('about') }}">Contact</a></li>
 
 
             {% if is_granted('ROLE_ADMIN') %}
